[package]
name = "aranet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bluer = { version = "0.15.7", features = ["full"] }
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3.28"
uuid = "1.3.1"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
nagiosplugin = "0.5.2"
clap = { version = "4.2.7", features = ["derive"] }
chrono = "0.4.24"
