[package]
name = "aranet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
futures = "0.3.28"
uuid = "1.3.1"

# minimum binary requirements
clap = { version = "4.2.7", features = ["derive"], optional = true}
pretty_env_logger = { version = "0.4.0", optional = true }

# optional binary output formats
# serde also enables serialization within main library
serde = { version = "1.0.163", optional = true }
serde_json = { version = "1.0.96", optional = true }
nagiosplugin = { version = "0.5.2", optional = true }

[features]
json = ["serde_json", "serde"]
cgi_detection = []
# binary requires 'clap' and 'pretty_env_logger' at minimum
default = ["nagiosplugin", "clap", "pretty_env_logger", "json", "cgi_detection"]
